JIRA-000: upgrade to gradle 7.3.3